<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Welcome" >

    <Button
        android:id="@+id/page1button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/page1button3"
        android:layout_below="@+id/page1textView1"
        android:text="@string/page1_button1" />

    <Button
        android:id="@+id/page1button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/page1button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/page1_button2" />

    <Button
        android:id="@+id/page1button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/page1button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/page1_button3" />
    
    <Button
        android:id="@+id/welcome_gotomisc_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/page1button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/welcome_gotomisc_button" />

    <TextView
        android:id="@+id/page1textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/page1button1"
        android:layout_alignParentTop="true"
        android:layout_marginTop="46dp"
        android:text="@string/page1_hi_string"
        android:textSize="25sp" />

</RelativeLayout>