<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
 
    <TextView
        android:id="@+id/intent_examples_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/intent_examples_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/intent_example_1_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/intent_examples_title_textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/intent_example_1_txt" />

    <Button
        android:id="@+id/intent_example_2_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/intent_example_1_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/intent_example_2_txt" />

</RelativeLayout>