<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/ui_simple_toast_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="34dp"
        android:text="@string/ui_simple_toast_textView_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/ui_simple_toast_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ui_simple_toast_textView"
        android:layout_alignBottom="@+id/ui_simple_toast_textView"
        android:layout_marginLeft="34dp"
        android:layout_toRightOf="@+id/ui_simple_toast_textView"
        android:text="@string/ui_simple_toast_textView_text" />

    <TextView
        android:id="@+id/ui_text_toast_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ui_simple_toast_button"
        android:layout_marginTop="48dp"
        android:text="@string/ui_text_toast_textView_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/ui_text_toast_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ui_text_toast_textView"
        android:ems="10" />

    <Button
        android:id="@+id/ui_text_toast_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/ui_text_toast_editText"
        android:text="@string/ui_text_toast_button_text" />
    
    <TextView
        android:id="@+id/ui_custom_toast_view_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ui_text_toast_button"
        android:layout_marginTop="55dp"
        android:text="@string/ui_custom_toast_view_textView_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>